--- a/app/src/main/res/layout/content_user_list.xml
+++ b/app/src/main/res/layout/content_user_list.xml
@@ -4,22 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="1"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="io.github.iamrajendra.chatexample.ChatActivity"
-    tools:showIn="@layout/activity_chat">
-
+    tools:context="io.github.iamrajendra.chatexample.UserList"
+    tools:showIn="@layout/activity_user_list">
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/chat_rv"
+        android:layout_margin="15dp"
+        android:id="@+id/user_list_rv"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".9"
-         />
+        android:layout_height="match_parent"/>
 
-    <EditText
-        android:id="@+id/chat_text_et"
-        android:layout_weight=".1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp" />
+
 </LinearLayout>
